tech chase notes + shadowboxing

--- a/tournament-notes.org
+++ b/tournament-notes.org
@@ -303,3 +303,41 @@ hits, and make them less stray. Use moves that you know you can convert off of,
 and know how to convert (my words, not his). Definitely figure out every way
 you can possibly combo into Waft, but also figure out how to extend weird nair
 starters and platform combos. 
+* 1/13/2020 @ Tech Chase
+I lost my round one against a Snake. My disadvantage was horrible. I'd be
+playing fairly even neutral and then just lose a stock off of one off stage
+interaction. I got dash attacked, tilted up close, up smash -> down smash at the
+ledge. I figured out game 2 that my aerial stuff was NOT working. I'd get hit
+with his grenades, and anti-aired with utilt. So I started playing a more
+grounded game, getting closer to him and throwing out dtilt and ftilt to catch
+his dash attacks. Running in with unreactable fair. 
+
+Second round I played a Mario, and I wasn't in a great mindset. Just a lot of
+autopilot. He wasn't scrubby, but again I had terrible disadvantage. He'd hit me
+with Mario combos and easily do 60 every time, even though the rest of his game
+wasn't that good. 
+
+When I swat people out of the air with my fair, I need something better to do
+next. It doesn't lead to much of anything at low percents. I can tech chase at
+higher percents. Should I just do something else at low percents? But then how
+can even threaten the space in front of me if I can't fair?
+
+I got destroyed by Kenneth in round 3. Again, my disadvantage was awful. 
+
+Kenneth mentioned pressuring people at a range where they can't react to my
+fair. 
+
+How do I know what someone's going to do? For example, when Chrom is in the
+corner. He could ftilt. He could dtilt. He could jab. He could shield. He could
+jump. He could buffer an aerial. He could do a landing aerial. And a lot of
+those are very similar. Okay, so I see that they like to do normals. Or aerial
+then normal. Ftilt and dtilt are different moves to beat out. And it seems so
+arbitrary to pick one over the other. 
+
+I kind of understand how to control space, but I generally don't understand when
+people want to be there. 
+
+How does Glutonny apply pressure to people? It feels like he's usually in his
+opponent's face, crossing them up with nairs, dtilting them, chomping their
+shield. I don't understand how he even gets that close, especially against (for
+example) sword characters. 
