tech chase notes

--- a/tournament-notes.org
+++ b/tournament-notes.org
@@ -341,3 +341,76 @@ How does Glutonny apply pressure to people? It feels like he's usually in his
 opponent's face, crossing them up with nairs, dtilting them, chomping their
 shield. I don't understand how he even gets that close, especially against (for
 example) sword characters. 
+* 1/21/2020 @ Tech Chase
+RUN BACKWARD, WALK FORWARD. 
+
+ok, so i beat two randoms and i lost to mr mango and solo. 1-2 and 0-2. mango
+played gunner, and i am slowly figuring out what to do against projectile
+characters. don't get your jumps called out when they do grounded
+projectiles. get to a mid-close range and read when they are going to do a
+projectile, that's when you can get in. push them into the corner and make them
+choose an option. thing 1: what exactly are a projectile character's options
+once you have pushed them into a corner? when you go in, train them with bite at
+first. then mix in fair grab. tomahawk uptilt is great. tomahawk grab is
+great. don't be afraid to just bike in neutral. 
+
+vs ike i got caught neutral air dodging sooooo much. so one problem that i have
+with ike is that i can do a jump in approach and react to his jump with nair or
+fair. but at a lot of percents that doesn't lead to much. or maybe it does and i
+don't know what to do after it. i feel like the same thing applies for all the
+sword characters, because i swat them out of the air with fair a lot too. 
+
+talked with kenneth a bunch after the tournament. i need to be way more solid
+on my fundamental situations. on shield situations is a big one. i need to make
+a list of the situations that i will encounter in every match pretty much for
+sure and understand what the mixups are.
+
+shield pressure
+high recovery / low recovery
+tomahawk
+retreating
+approaching (too generic....)
+my shadowboxing neutral? 
+projectiles
+
+is that even enough
+
+how do i pay attention to all this stuff, all that shit sounds super generic and
+not very helpful. 
+
+but basically what cat said. doing something safe into waiting and gathering
+information is a true combo in every fighting game. my problem isn't what
+happens when i, for instance, hit their shield, because that's easy. it's
+rps. it's not rps, but it is weird advanced rps where i can influence and read
+what they are gonna do. but what happens before that, i don't understand. how do
+i bait someone to do something in neutral? 
+
+intentionally misspace an aerial, but do it so that they can't whiff punish
+do this when they want to whiff punish. 
+
+mix in empty hops and fadebacks with your jumps in to visually mix up
+do this against characters that have trouble burst punishing you in the air. do
+this against characters who prefer to retreat. do this when they react to your
+jump in approach.
+
+run in and backflip
+do this when they react to running in with a normal. 
+
+dash back
+do this when they want to hit where you are. do this when they don't like to
+overshoot their approaches. do this after you commit to being in one space for a
+long time.
+
+high aerial and then extremely low aerial
+do this as a bait when you feel that they want to whiff punish your stuff out
+aerials. do this when they want to get underneath you. do this against
+characters that can't anti-air well.
+
+run up shield to make them misspace an attack
+do this when they are abusing safe or fadeback aerials. do this when you think
+they will try to stuff out your approach. do this when you think they will try
+to hit in front of where you are. 
+
+i need to lab lab lab lab waft confirms. super hard. i need to get the real
+basic ones down. just work on em and lab em until they are airtight. might need
+to change control scheme. questions to answer:
