--- a/wario.org
+++ b/wario.org
@@ -2145,7 +2145,7 @@ not doing those, I should punish him for fruit cycling.
 
 I got hit with a lot of random shit. Fruit lingers just a bit too long, key from
 offstage. 
-* Every Waft I'v Ever Seen
+* Every Waft I've Ever Seen
 https://youtu.be/iy_MZIRVsC4?t=219
 full, true, greninja, 40%
 catch them in the air with fair. buffer uptilt. jump and get the waft, it looks
@@ -2295,6 +2295,12 @@ he does it again and it catches the roll...
 https://youtu.be/ATb2_vttLuI?t=459
 gluto nairs out of shield in a double shield situation but drifts back so they
 cant really get the counterhit
+
+** lancelot
+-learn to read the flow of the match and pressure your opponent when he starts
+being defensive and respects you so that¡¯s why play safe to observe!(never only
+play play defensive or only offensive)
+
 * ACTION ITEMS
 ** NEUTRAL 
 
