--- a/tournament-notes.org
+++ b/tournament-notes.org
@@ -414,3 +414,9 @@ to hit in front of where you are.
 i need to lab lab lab lab waft confirms. super hard. i need to get the real
 basic ones down. just work on em and lab em until they are airtight. might need
 to change control scheme. questions to answer:
+* 2/4/2020 @ Battle n Brew
+Did the best I ever did today. Beat Wenbo, a D3 who was solid, and Rincon. Felt
+good playing. Fear and ego are the mind-killers. As soon as your mind drifts
+away from the game and towards peripheral things, you've lost. You need to stay
+right on that edge of consciousness. Aware of the game and making adjustments,
+but free 
