--- a/wario.org
+++ b/wario.org
@@ -2081,7 +2081,7 @@ roll, just mix in different things. Make it hard for him. And try to get a bead
 on what Joker's actually going for in these situations, I bet it's really like
 five or less situations that Joker is consistently setting up.
 
-I was talking just a little with Corey earlier about Smash. I described to him
+ I was talking just a little with Corey earlier about Smash. I described to him
 the situation of Lucina doing fadeback fair, and how hard it is to get in on
 that. He said two things:
 One, you need to play closer. If it's hard to deal with, play at a spacing that
@@ -2145,6 +2145,26 @@ not doing those, I should punish him for fruit cycling.
 
 I got hit with a lot of random shit. Fruit lingers just a bit too long, key from
 offstage. 
+** 2/1/2020 @ cat
+So this was one of the first times that I felt like I really understood the
+neutral game that was going on. I wanted to stay aerial and bait out Cat that
+way, because I could close the gap quick enough to punish when she whiffed. I
+wanted to stay right outside the range of her bair and fair. I wanted to do the
+fake jumps that I like. Occasionally, I wanted to actually full hop in and go
+for a fair, nair, or bite. I also wanted to make her misspace her aerials and
+then go in with a nair combo. 
+
+Her counterplay to my jumping around was to mix in side B and approaching
+nair. Sometimes she'd throw in a dash attack to break my zone. The problem was
+that I knew how she wanted to break my zone, but not when. So if I wanted to
+call her out for it, I didn't know when to do that. I wanted to keep feigning my
+aerial zoning and fake jumps, but if I did one too many she'd just come in with
+the zone break and hit me. If I played at a more unreactable range, she would
+close the gap and I would lose space. 
+
+I tried playing more grounded, but it didn't work. Her disjoints are huge and I
+couldn't contest them when I was on the ground. Plus since I'm slow, her
+dashbacks still worked against me when I was grounded. 
 * Every Waft I've` Ever Seen
 https://youtu.be/iy_MZIRVsC4?t=219
 full, true, greninja, 40%
@@ -2226,18 +2246,19 @@ full, true, inkling, 73%
 normal uptilt after a missed dair confirm. start the waft on frame 5 of jump.
 * Drills
 ** Tech
-uthrow -> uair
-utilt -> full waft
-utilt -> dj + di -> half waft
-uair -> dj + di -> half waft
 sliding ftilt
 scuttle turnaround normals
 get bike for ledgetrap
 dtilt -> spot dodge
 dtilt -> spot dodge -> waft
 ftilt -> spot dodge 
-
-** Movement
+** Combos
+uthrow -> uair
+utilt -> full waft
+utilt -> dj + di -> half waft
+uair -> dj + di -> half waft
+nair 2 -> rar bair
+** Movemnet
 short hop backflip
 full hop backflip
 backflip -> drift in -> ff -> fair
@@ -2298,7 +2319,12 @@ dash back past their whiff punish
 
 fh in -> fake fadeback fair -> landing nair
 less committal approach. if they drop shield when they see the fair predicting
-fadeback. 
+fadeback.
+ 
+fh in -> empty land -> dtilt
+https://youtu.be/l5xE-okCf0w?t=340
+has to be closer range, have to condition them to want to shield grab you,
+better at death %
 
 * Unstructured Ideas
 https://youtu.be/RNvkMbnqF5M?t=267
@@ -2318,6 +2344,7 @@ he does it again and it catches the roll...
 https://youtu.be/ATb2_vttLuI?t=459
 gluto nairs out of shield in a double shield situation but drifts back so they
 cant really get the counterhit
+
 
 ** lancelot
 -learn to read the flow of the match and pressure your opponent when he starts
@@ -2398,8 +2425,6 @@ when can i run past them?
 
 CONTROLLER STUFF
 keep your index finger on the trigger at all times
-
-
 
 * CLOSED ACTION ITEMS
 - [ ] Be completely conscious of when you are using aerial out of shield
